# nethra

./: .gitignore  .ocamlformat  LICENSE  README.md  dune-project  nethra.opam  settings.gradle.kts
doc/dependent-type/: main.html
doc/dependent-type-scala-3/: main.html
doc/presentation/: dependent-type.html
kotlin/: build.gradle.kts
lib/nethra/lang/: nethra_lang.mli
lib/nethra/lang/ast/: bindings.ml  bindings.mli  context.ml  context.mli  hypothesis.ml  hypothesis.mli  proof.ml  proof.mli  term.ml  term.mli
lib/nethra/lang/basic/: basic.mli  dune  reduction.ml  reduction.mli  substitution.ml  substitution.mli
lib/nethra/lang/render/: dune  hypothesis.ml  hypothesis.mli  proof.ml  proof.mli  term.ml  term.mli
lib/nethra/lang/specs/: nethra_lang_specs.mli
lib/nethra/syntax/parser/: dune  parsers.ml  parsers.mli  response.ml  response.mli
lib/nethra/syntax/source/: dune  location.ml  location.mli  region.ml  region.mli  sources.ml  sources.mli  specs.mli
lib/nethra/toy/: dune  nethra_toy.mli
lib/nethra/toy/_samples_/: category.toy
lib/nethra/toy/cst/: binding.mli  dune  localized.ml  localized.mli  render.ml  render.mli  term.mli
ocaml/: dune-project  nethra.opam
ocaml/ast/: term.ml
ocaml/core/: dune  term.ml  term.mli
ocaml/lib/nethra/: dune  nethra.mli
ocaml/lib/nethra/ast/: ast.mli  bindings.ml  bindings.mli  context.ml  proof.ml  (+4 more)
ocaml/lib/nethra/toy/system/s00_compiler/: dune  stage.ml  stage.mli
ocaml/pretty/: dune  pretty.ml  pretty.mli
test/nethra/syntax/: common.ml  t00_tests.ml  t01_eval.ml  t02_operator.ml  t04_occurrence.ml
(+468 files in other folders)
