(library
 (name nethra_toy_compiler)
 (public_name nethra.toy.compiler)
 (libraries
  preface
  nethra.toy.cst
  nethra.toy.parser
  nethra.toy.abstraction
  nethra.syntax.source
  nethra.syntax.parser
  nethra.lang.specs
  nethra.lang.system.type)
 (modules_without_implementation nethra_toy_compiler))
